--- a/SmartMediHub/templates/index.html
+++ b/SmartMediHub/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <title>Health - Medical Website Template</title>
+     <title>MediHub</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -30,13 +30,13 @@
           <div class="container">
                <div class="row">
                     <div class="col-md-4 col-sm-5">
-                         <p>Welcome to a Professional Health Care</p>
+                         <p>Welcome to MediHub</p>
                     </div>
                          
                     <div class="col-md-8 col-sm-7 text-align-right">
-                         <span class="phone-icon"><i class="fa fa-phone"></i> 010-060-0160</span>
-                         <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> 6:00 AM - 10:00 PM (Mon-Fri)</span>
-                         <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#">info@company.com</a></span>
+                         <span class="phone-icon"><i class="fa fa-phone"></i> +250-795-130 -378</span>
+                         <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> 6:00 AM - 12:00 AM (All-Days)</span>
+                         <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#">Medihub@info.com</a></span>
                     </div>
                </div>
           </div>
@@ -51,7 +51,8 @@
                          <span class="icon icon-bar"></span>
                          <span class="icon icon-bar"></span>
                     </button>
-                    <a href="{% url 'index' %}" class="navbar-brand"><i class="fa fa-h-square"></i>ealth Center</a>
+                    <!-- <a href="{% url 'index' %}" class="navbar-brand"><i class="fa fa-h-square"></i>MediHub</a> -->
+                    <a href="{% url 'index' %}" class="navbar-brand"><img src="{% static 'images/mediHubpic.png' %}" alt="MediHub Logo"></a>
                </div>
 
                <div class="collapse navbar-collapse">
@@ -75,7 +76,7 @@
                          <div class="item item-first">
                               <div class="caption">
                                    <div class="col-md-offset-1 col-md-10">
-                                        <h3>Let's make your life happier</h3>
+                                        <h3>With MediHub</h3>
                                         <h1>Healthy Living</h1>
                                         <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our Doctors</a>
                                    </div>
@@ -85,7 +86,7 @@
                          <div class="item item-second">
                               <div class="caption">
                                    <div class="col-md-offset-1 col-md-10">
-                                        <h3>Aenean luctus lobortis tellus</h3>
+                                        <h3>With MediHub</h3>
                                         <h1>New Lifestyle</h1>
                                         <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">More About Us</a>
                                    </div>
@@ -95,7 +96,7 @@
                          <div class="item item-third">
                               <div class="caption">
                                    <div class="col-md-offset-1 col-md-10">
-                                        <h3>Pellentesque nec libero nisi</h3>
+                                        <h3>With MediHub</h3>
                                         <h1>Your Health Benefits</h1>
                                         <a href="#news" class="section-btn btn btn-default btn-blue smoothScroll">Read Stories</a>
                                    </div>
@@ -112,15 +113,15 @@
                <div class="row">
                     <div class="col-md-6 col-sm-6">
                          <div class="about-info">
-                              <h2 class="wow fadeInUp" data-wow-delay="0.6s">Welcome to Your <i class="fa fa-h-square"></i>ealth Center</h2>
+                              <h2 class="wow fadeInUp" data-wow-delay="0.6s">Welcome to Your <i class="fa fa-h-square"></i>ealth Community</h2>
                               <div class="wow fadeInUp" data-wow-delay="0.8s">
-                                   <p>Aenean luctus lobortis tellus, vel ornare enim molestie condimentum. Curabitur lacinia nisi vitae velit volutpat venenatis.</p>
-                                   <p>Sed a dignissim lacus. Quisque fermentum est non orci commodo, a luctus urna mattis. Ut placerat, diam a tempus vehicula.</p>
+                                   <p>Your trusted partner in modern healthcare management. At MediHub, we simplify hospital operations and ensure seamless communication between patients, doctors, and administrators all in one secure, smart platform..</p>
+                                   
                               </div>
                               <figure class="profile wow fadeInUp" data-wow-delay="1s">
                                    <img src="{% static 'images/author-image.jpg' %}" class="img-responsive" alt="">
                                    <figcaption>
-                                        <h3>Dr. Neil Jackson</h3>
+                                        <h3>Dr. Gisubizo Prince</h3>
                                         <p>General Principal</p>
                                    </figcaption>
                               </figure>
@@ -146,11 +147,11 @@
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.2s">
                               <img src="{% static 'images/team-image1.jpg' %}" class="img-responsive" alt="">
                               <div class="team-info">
-                                   <h3>Nate Baston</h3>
+                                   <h3>Gisubizo Prince</h3>
                                    <p>General Principal</p>
                                    <div class="team-contact-info">
-                                        <p><i class="fa fa-phone"></i> 010-020-0120</p>
-                                        <p><i class="fa fa-envelope-o"></i> <a href="#">general@company.com</a></p>
+                                        <p><i class="fa fa-phone"></i> 079-127-7830</p>
+                                        <p><i class="fa fa-envelope-o"></i> <a href="#">gisubizo@gmail.com</a></p>
                                    </div>
                                    <ul class="social-icon">
                                         <li><a href="#" class="fa fa-linkedin-square"></a></li>
@@ -164,11 +165,11 @@
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.4s">
                               <img src="{% static 'images/team-image2.jpg' %}" class="img-responsive" alt="">
                               <div class="team-info">
-                                   <h3>Jason Stewart</h3>
+                                   <h3>Shyaka Gexan</h3>
                                    <p>Pregnancy</p>
                                    <div class="team-contact-info">
-                                        <p><i class="fa fa-phone"></i> 010-070-0170</p>
-                                        <p><i class="fa fa-envelope-o"></i> <a href="#">pregnancy@company.com</a></p>
+                                        <p><i class="fa fa-phone"></i> 078-310-5555</p>
+                                        <p><i class="fa fa-envelope-o"></i> <a href="#">shyaka@gmail.com</a></p>
                                    </div>
                                    <ul class="social-icon">
                                         <li><a href="#" class="fa fa-facebook-square"></a></li>
@@ -183,11 +184,11 @@
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.6s">
                               <img src="{% static 'images/team-image3.jpg' %}" class="img-responsive" alt="">
                               <div class="team-info">
-                                   <h3>Miasha Nakahara</h3>
+                                   <h3>Byukusenge Pierrone</h3>
                                    <p>Cardiology</p>
                                    <div class="team-contact-info">
-                                        <p><i class="fa fa-phone"></i> 010-040-0140</p>
-                                        <p><i class="fa fa-envelope-o"></i> <a href="#">cardio@company.com</a></p>
+                                        <p><i class="fa fa-phone"></i> 072-102-3955</p>
+                                        <p><i class="fa fa-envelope-o"></i> <a href="#">pierrone@gmail.com</a></p>
                                    </div>
                                    <ul class="social-icon">
                                         <li><a href="#" class="fa fa-twitter"></a></li>
@@ -216,13 +217,13 @@
                                    <img src="{% static 'images/news-image1.jpg' %}" class="img-responsive" alt="">
                               </a>
                               <div class="news-info">
-                                   <span>March 08, 2018</span>
+                                   <span>May 01, 2025</span>
                                    <h3><a href="news-detail.html">About Amazing Technology</a></h3>
-                                   <p>Maecenas risus neque, placerat volutpat tempor ut, vehicula et felis.</p>
+                                   <p>MediHub is built with cutting-edge technology to ensure speed, security, and efficiency. From real-time data tracking to automated appointment systems, our platform empowers hospitals to deliver smarter and faster healthcare services</p>
                                    <div class="author">
                                         <img src="{% static 'images/author-image.jpg' %}" class="img-responsive" alt="">
                                         <div class="author-info">
-                                             <h5>Jeremie Carlson</h5>
+                                             <h5>Uwihirwe Anitha</h5>
                                              <p>CEO / Founder</p>
                                         </div>
                                    </div>
@@ -236,13 +237,13 @@
                                    <img src="{% static 'images/news-image2.jpg' %}" class="img-responsive" alt="">
                               </a>
                               <div class="news-info">
-                                   <span>February 20, 2018</span>
+                                   <span>April 20, 2025</span>
                                    <h3><a href="news-detail.html">Introducing a new healing process</a></h3>
-                                   <p>Fusce vel sem finibus, rhoncus massa non, aliquam velit. Nam et est ligula.</p>
+                                   <p>Experience a new era of healing — where innovation meets care, and every patient journey is reimagined with precision and compassion.</p>
                                    <div class="author">
                                         <img src="{% static 'images/author-image.jpg' %}" class="img-responsive" alt="">
                                         <div class="author-info">
-                                             <h5>Jason Stewart</h5>
+                                             <h5>Gisubizo Prince</h5>
                                              <p>General Director</p>
                                         </div>
                                    </div>
@@ -256,9 +257,9 @@
                                    <img src="{% static 'images/news-image3.jpg' %}" class="img-responsive" alt="">
                               </a>
                               <div class="news-info">
-                                   <span>January 27, 2018</span>
-                                   <h3><a href="news-detail.html">Review Annual Medical Research</a></h3>
-                                   <p>Vivamus non nulla semper diam cursus maximus. Pellentesque dignissim.</p>
+                                   <span>March 27, 2025</span>
+                                   <h3><a href="news-detail.html">Explore the Latest Breakthroughs in Medical Innovation </a></h3>
+                                   <p>Empowering Clinics and Patients with Smart, Seamless Care.</p>
                                    <div class="author">
                                         <img src="{% static 'images/author-image.jpg' %}" class="img-responsive" alt="">
                                         <div class="author-info">
@@ -311,6 +312,15 @@
                                              <option>Cardiology</option>
                                              <option>Dental</option>
                                              <option>Medical Research</option>
+                                             <option>Pregnancy</option>
+                                             <option>Neurology</option>
+                                             <option>Orthopedics</option>
+                                             <option>Ophthalmology</option>
+                                             <option>Urology</option>
+                                             <option>Psychiatry</option>
+                                             <option>Dermatology</option>
+                                             <option>Gastroenterology</option>
+                                             <option>Endocrinology</option>
                                         </select>
                                    </div>
 
@@ -343,8 +353,8 @@
                               <p>Fusce at libero iaculis, venenatis augue quis, pharetra lorem. Curabitur ut dolor eu elit consequat ultricies.</p>
 
                               <div class="contact-info">
-                                   <p><i class="fa fa-phone"></i> 010-070-0170</p>
-                                   <p><i class="fa fa-envelope-o"></i> <a href="#">info@company.com</a></p>
+                                   <p><i class="fa fa-phone"></i> 079-513-0378</p>
+                                   <p><i class="fa fa-envelope-o"></i> <a href="#">medihub@info.com</a></p>
                               </div>
                          </div>
                     </div>
@@ -358,7 +368,7 @@
                                    </div>
                                    <div class="stories-info">
                                         <a href="#"><h5>Amazing Technology</h5></a>
-                                        <span>March 08, 2018</span>
+                                        <span>May 01, 2025</span>
                                    </div>
                               </div>
 
@@ -368,7 +378,7 @@
                                    </div>
                                    <div class="stories-info">
                                         <a href="#"><h5>New Healing Process</h5></a>
-                                        <span>February 20, 2018</span>
+                                        <span>April 20, 2025</span>
                                    </div>
                               </div>
                          </div>
@@ -378,9 +388,9 @@
                          <div class="footer-thumb">
                               <div class="opening-hours">
                                    <h4 class="wow fadeInUp" data-wow-delay="0.4s">Opening Hours</h4>
-                                   <p>Monday - Friday <span>06:00 AM - 10:00 PM</span></p>
+                                   <p>All-Days<span>06:00 AM - 11:00 PM</span></p>
                                    <p>Saturday <span>09:00 AM - 08:00 PM</span></p>
-                                   <p>Sunday <span>Closed</span></p>
+                                  
                               </div> 
 
                               <ul class="social-icon">
@@ -394,8 +404,8 @@
                     <div class="col-md-12 col-sm-12 border-top">
                          <div class="col-md-4 col-sm-6">
                               <div class="copyright-text"> 
-                                   <p>Copyright &copy; 2017 Your Company 
-                                   | Design: <a href="http://www.tooplate.com" target="_parent">Tooplate</a></p>
+                                   <p>Copyright &copy; 2025 MediHub</p> 
+                                   
                               </div>
                          </div>
                          <div class="col-md-6 col-sm-6">
@@ -403,7 +413,7 @@
                                    <a href="#">Laboratory Tests</a>
                                    <a href="#">Departments</a>
                                    <a href="#">Insurance Policy</a>
-                                   <a href="#">Careers</a>
+                              
                               </div>
                          </div>
                          <div class="col-md-2 col-sm-2 text-align-center">
