--- a/SmartMediHub/templates/index.html
+++ b/SmartMediHub/templates/index.html
@@ -51,7 +51,7 @@
                          <span class="icon icon-bar"></span>
                          <span class="icon icon-bar"></span>
                     </button>
-                    <a href="{% url 'index' %}" class="navbar-brand"><img src="{% static 'images/mediHubpic.png' %}" alt="MediHub Logo"></a>
+                    <a href="{% url 'index' %}" class="navbar-brand">MediHub</a>
                </div>
 
                <div class="collapse navbar-collapse">
@@ -221,7 +221,7 @@
                                    <h3><a href="news-detail.html">About Amazing Technology</a></h3>
                                    <p>MediHub is built with cutting-edge technology to ensure speed, security, and efficiency. From real-time data tracking to automated appointment systems, our platform empowers hospitals to deliver smarter and faster healthcare services</p>
                                    <div class="author">
-                                        <img src="{% static 'images/author-image.jpg' %}" class="img-responsive" alt="">
+                                        <img src="{% static 'images/anitah.png' %}" class="img-responsive" alt="">
                                         <div class="author-info">
                                              <h5>Uwihirwe Anitha</h5>
                                              <p>CEO / Founder</p>
@@ -241,9 +241,9 @@
                                    <h3><a href="news-detail.html">Introducing a new healing process</a></h3>
                                    <p>Experience a new era of healing — where innovation meets care, and every patient journey is reimagined with precision and compassion.</p>
                                    <div class="author">
-                                        <img src="{% static 'images/author-image.jpg' %}" class="img-responsive" alt="">
+                                        <img src="{% static 'images/price.png' %}" class="img-responsive" alt="">
                                         <div class="author-info">
-                                             <h5>Gisubizo Prince</h5>
+                                             <h5>Marirungu Price</h5>
                                              <p>General Director</p>
                                         </div>
                                    </div>
@@ -261,9 +261,9 @@
                                    <h3><a href="news-detail.html">Explore the Latest Breakthroughs in Medical Innovation </a></h3>
                                    <p>Empowering Clinics and Patients with Smart, Seamless Care.</p>
                                    <div class="author">
-                                        <img src="{% static 'images/author-image.jpg' %}" class="img-responsive" alt="">
+                                        <img src="{% static 'images/bellah.png' %}" class="img-responsive" alt="">
                                         <div class="author-info">
-                                             <h5>Andrio Abero</h5>
+                                             <h5>Bellah Igola</h5>
                                              <p>Online Advertising</p>
                                         </div>
                                    </div>
@@ -279,7 +279,7 @@
           <div class="container">
                <div class="row">
                     <div class="col-md-6 col-sm-6">
-                         <img src="{% static 'images/appointment-image.jpg' %}" class="img-responsive" alt="">
+                         <img src="{% static 'images/loh.png' %}" class="img-responsive" alt="">
                     </div>
 
                     <div class="col-md-6 col-sm-6">
