--- a/SmartMediHub/templates/index.html
+++ b/SmartMediHub/templates/index.html
@@ -51,7 +51,7 @@
                          <span class="icon icon-bar"></span>
                          <span class="icon icon-bar"></span>
                     </button>
-                    <a href="{% url 'index' %}" class="navbar-brand"><img src="{% static 'images/mediHubpic.png' %}" alt="MediHub Logo"></a>
+                    <a href="{% url 'index' %}" class="navbar-brand"><img src="{% static 'images/mediHubpic.png' %}" alt="MediHub Logo">hello</a>
                </div>
 
                <div class="collapse navbar-collapse">
