--- a/SmartMediHub/templates/index.html
+++ b/SmartMediHub/templates/index.html
@@ -51,11 +51,7 @@
                          <span class="icon icon-bar"></span>
                          <span class="icon icon-bar"></span>
                     </button>
-<<<<<<< HEAD
-                    <a href="{% url 'index' %}" class="navbar-brand"><img src="{% static 'images/mediHubpic.png' %}" alt="MediHub Logo">hello</a>
-=======
                     <a href="{% url 'index' %}" class="navbar-brand">MediHub</a>
->>>>>>> 9dfc671e9589e127c47bf7dd66fb2c361c63acde
                </div>
 
                <div class="collapse navbar-collapse">
@@ -65,8 +61,8 @@
                          <li><a href="#team" class="smoothScroll">Doctors</a></li>
                          <li><a href="#news" class="smoothScroll">News</a></li>
                          <li><a href="#google-map" class="smoothScroll">Contact</a></li>
-                         <li class="appointment-btn"><a href="#signup">Create Account</a></li>
-                         <li class="login-btn"><a href="{% url 'login' %}">Login</a></li>
+                         <li class="appointment-btn"><a href="#appointment">Make Appointment</a></li>
+                        
                     </ul>
                </div>
           </div>
@@ -278,56 +274,83 @@
           </div>
      </section>
 
-     <!-- SIGNUP FORM -->
-     <section id="signup" data-stellar-background-ratio="3">
-          <div class="container">
-               <div class="row">
-                    <div class="col-md-6 col-sm-6">
-                         <img src="{% static 'images/loh.png' %}" class="img-responsive" alt="">
-                    </div>
-
-                    <div class="col-md-6 col-sm-6">
-                         <form id="signup-form" role="form" method="post" action="{% url 'patient_signup' %}">
-                              {% csrf_token %}
-                              <div class="section-title wow fadeInUp" data-wow-delay="0.4s">
-                                   <h2>Create Your Account</h2>
-                              </div>
-
-                              <div class="wow fadeInUp" data-wow-delay="0.8s">
-                                   <div class="col-md-6 col-sm-6">
-                                        <label for="first_name">First Name</label>
-                                        <input type="text" class="form-control" id="first_name" name="first_name" placeholder="First Name" required>
-                                   </div>
-
-                                   <div class="col-md-6 col-sm-6">
-                                        <label for="last_name">Last Name</label>
-                                        <input type="text" class="form-control" id="last_name" name="last_name" placeholder="Last Name" required>
-                                   </div>
-
-                                   <div class="col-md-12 col-sm-12">
-                                        <label for="email">Email</label>
-                                        <input type="email" class="form-control" id="email" name="email" placeholder="Your Email" required>
-                                   </div>
-
-                                   <div class="col-md-6 col-sm-6">
-                                        <label for="password">Password</label>
-                                        <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
-                                   </div>
-
-                                   <div class="col-md-6 col-sm-6">
-                                        <label for="confirm_password">Confirm Password</label>
-                                        <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required>
-                                   </div>
-
-                                   <div class="col-md-12 col-sm-12">
-                                        <label for="phone">Phone Number</label>
-                                        <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone Number" required>
-                                        
-                                        <button type="submit" class="form-control" id="signup-submit" name="submit">Create Account</button>
-                                        <p class="text-center mt-3">Already have an account? <a href="{% url 'login' %}">Login here</a></p>
-                                   </div>
-                              </div>
-                        </form>
+<!-- APPOINTMENT FORM -->
+<section id="appointment" data-stellar-background-ratio="3">
+     <div class="container">
+       <div class="row">
+   
+         <div class="col-md-6 col-sm-6">
+           <img src="{% static 'images/loh.png' %}" class="img-responsive" alt="">
+         </div>
+   
+         <div class="col-md-6 col-sm-6">
+           <form id="appointment-form" role="form" method="post" action="{% url 'appointment' %}">
+             {% csrf_token %}
+             <div class="section-title wow fadeInUp" data-wow-delay="0.4s">
+               <h2>Book Appointment</h2>
+             </div>
+   
+             <div class="wow fadeInUp" data-wow-delay="0.8s">
+               <div class="col-md-6 col-sm-6">
+                 <label for="id_first_name">First Name</label>
+                 {{ form.first_name }}
+                 <input type=" your name" class="forms">
+               </div>
+   
+               <div class="col-md-6 col-sm-6">
+                 <label for="id_last_name">Last Name</label>
+                 {{ form.last_name }}
+                 <input type=" your name" class="forms">
+               </div>
+   
+               <div class="col-md-12 col-sm-12">
+                 <label for="id_email">Email</label>
+                 {{ form.email }}
+                 <input type=" your name" class="forms">
+               </div>
+   
+               <div class="col-md-12 col-sm-12">
+                 <label for="id_phone">Phone Number</label>
+                 {{ form.phone }}
+                 <input type=" your name" class="forms">
+               </div>
+   
+               <div class="col-md-12 col-sm-12">
+                 <label for="id_doctor">Choose Doctor</label>
+                 {{ form.doctor }}
+                 <select name="Select Doc" id="fomrs-sel-doc">Chose your referred Doc:
+                    <option value="Doc1"></option>
+                    <option value="Doc1">Dr kanimba</option>
+                    <option value="Doc1">Dr Bruce</option>
+                    <option value="Doc1">Dr Anitha</option>
+                    <option value="Doc1">Dr Ophelie</option>
+                 </select>
+                
+               </div>
+   
+               <div class="col-md-12 col-sm-12">
+                 <label for="id_date_time">Preferred Date & Time</label>
+                 {{ form.date_time }}
+                 <input type=" your name" class="forms">
+               </div>
+   
+               <div class="col-md-12 col-sm-12">
+                 <label for="id_purpose">Purpose</label>
+                 {{ form.purpose }}
+                 <input type=" your name" class="forms">
+               </div>
+   
+               <div class="col-md-12 col-sm-12">
+                 <button type="submit" class="form-control" id="forms">Submit Appointment</button>
+               </div>
+             </div>
+           </form>
+         </div>
+   
+       </div>
+     </div>
+   </section>
+   
                     </div>
                </div>
           </div>
