finished my task

--- a/MediHubs/templates/auth_application/login.html
+++ b/MediHubs/templates/auth_application/login.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'auth.html' %}
+{% comment %} This template extends the base auth.html template!!! {% endcomment %}
+
 {% block title %}Login - MediHub{% endblock %}
 {% block content %}
 <div class="login-container">
