--- a/SmartMediHub/templates/index.html
+++ b/SmartMediHub/templates/index.html
@@ -61,7 +61,7 @@
                          <li><a href="#team" class="smoothScroll">Doctors</a></li>
                          <li><a href="#news" class="smoothScroll">News</a></li>
                          <li><a href="#google-map" class="smoothScroll">Contact</a></li>
-                         <li class="appointment-btn"><a href="#appointment">Create Account</a></li>
+                         <li class="appointment-btn"><a href="{% url 'register' %}">Create Account</a></li>
                         
                     </ul>
                </div>
