--- a/MediHubs/templates/auth_application/register.html
+++ b/MediHubs/templates/auth_application/register.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'auth.html' %}
+{% comment %} This template extends the base auth.html template!!! {% endcomment %}
+
 {% block title %}Register - MediHub{% endblock %}
 {% block content %}
     <h2>Register</h2>
